# heimdall-detectnode

./: .gitignore  README
heimdall-detectnode/: CMakeLists.txt  package.xml
heimdall-detectnode/cfg/: DetectNode.cfg
heimdall-detectnode/i3-layouts/: README  dd_image_views.json  dd_image_views_wt.json
heimdall-detectnode/include/: rviz_visualizer.h
heimdall-detectnode/include/heimdall_detectnode/: dd.h  dd_detection.h  detect_node.h  mask.h  pcl_detection.h
heimdall-detectnode/launch/: astra.launch  dd_image_views.launch  detect_node.launch
heimdall-detectnode/launch/includes/: device.launch.xml
heimdall-detectnode/src/: detect_node.cc  rviz_visualizer.cc
heimdall-detectnode/src/dd/: add_background_image.cc  calc_background_model.cc  calc_deviation.cc  calc_difference.cc  constructor.cc  destructor.cc  filter.cc  includes.ih
heimdall-detectnode/src/dd_detection/: constructor.cc  detect_activity.cc  detect_change.cc  detect_in_mask_event.cc  detect_out_mask_event.cc  detect_within_mask_event.cc  includes.ih  process_activities.cc  threshold.cc
heimdall-detectnode/src/detect_node/: add_mask.cc  add_mask_service.cc  calc_and_publish_change.cc  calibrate.cc  command_service.cc  config_callback.cc  constructor.cc  create_colored_cloud.cc  depth_callback.cc  destructor.cc  detect.cc  detect_activity.cc  event_notification.cc  find_mask.cc  get_mask_list_service.cc  get_mask_service.cc  idle.cc  includes.ih  load_masks.cc  points_callback.cc  publish_image.cc  publish_masks.cc  remove_mask.cc  remove_mask_list_service.cc  rgb_callback.cc  run.cc  save_masks.cc  threshold.cc
heimdall-detectnode/src/mask/: constructor.cc  convert_to_service_response.cc  destructor.cc  includes.ih
heimdall-detectnode/src/pcl_detection/: add_background.cc  calc_background_model.cc  calculate_volume.cc  calibrate_background.cc  calibrate_cloud.cc  calibrate_offset.cc  color_cloud.cc  constructor.cc  convex_volume.cc  detect_surface_change.cc  extract_cloud.cc  filter_background.cc  filter_cloud.cc  find_surface.cc  get_moving_average_volume.cc  includes.ih
