<?xml version="1.0"?>
<package>
  <name>heimdall_detectnode</name>
  <version>1.0.0</version>
  <description>The detect node analyzes 2D and 3D images to detect deviations</description>
  <maintainer email="info@enacer.com">Enacer</maintainer>
  <author>Christof Oost</author>
  <author>Amir Shantia</author>
  <author>Ron Snijders</author>
  <author>Egbert van der Wal</author>
  <license>AGPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>heimdall_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>heimdall_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
  </export>
</package>
